# bot_eassets_operacao

./: .env.local  .gitignore  ANALISE MOEDAS CLAUDE.py  INFRA.md  PLANEJAMENTO_BOT_ENCRYPTOS.md  README.md  analise.json  analise_dados.py  app.py  check_db_today.py  db.py  docker-compose.yml  fluxo.json  gerar_painel.py  guia_estilo.md  ideas.txt  phoenix.db  prompt_analise_operações.md  run_migration.py  salvar_analise.py  walkthrough.md.resolved
.playwright-cli/: page-2026-06-12T01-09-06-725Z.yml  page-2026-06-12T01-11-03-333Z.yml  page-2026-06-12T01-11-25-388Z.yml  page-2026-06-12T01-11-36-016Z.yml  page-2026-06-12T01-11-45-919Z.yml  page-2026-06-12T01-11-57-111Z.yml
Json extraidos encryptos/: eassets-panel-20260609-125841.json
Manuais/: Diretrizes de Estratégia e Análise de Mercado_ Briefing Encryptos.md  Manual Operacional_ Protocolos de Entrada Segura e Análise de Correlação.md  The Encryptos Master Guide_ Decoding Market Strength and Futures Dynamics.md  uso skill.md
backend/: analise_pnl.py  analyze_audit.py  auth.py  (+32 more)
bot_encryptos/rust_core/: .env.example  Cargo.toml  Dockerfile
bot_encryptos/rust_core/.cargo/: config.toml
bot_encryptos/rust_core/src/: config.rs  main.rs
bot_encryptos/rust_core/src/db/: mod.rs  postgres.rs
bot_encryptos/rust_core/src/engine/: decision.rs  mod.rs  scorer.rs  signal_filter.rs
bot_encryptos/rust_core/src/market/: btc_monitor.rs  bybit_rest.rs  bybit_ws.rs  mod.rs
bot_encryptos/rust_core/src/trading/: bybit_executor.rs  mod.rs  position_manager.rs  risk_manager.rs  structural_validator.rs  watchlist_manager.rs
(+258 files in other folders)
