[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest        = { version = "0.11", features = ["json"] }
sqlx           = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal", "chrono", "uuid"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
axum           = "0.7"
hmac           = "0.12"
sha2           = "0.10"
hex            = "0.4"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy        = "0.15"
chrono         = { version = "0.4", features = ["serde"] }
anyhow         = "1"
futures-util   = "0.3"
arc-swap       = "1"
dashmap        = "5"
rust_decimal   = { version = "1", features = ["serde-float"] }
bigdecimal     = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["v4"] }
